fixes overflow

--- a/styles.less
+++ b/styles.less
@@ -35,6 +35,7 @@
 
 //experience
 #experience {
+    overflow: auto;
     .right {
         padding-bottom: 20px;
     }
@@ -55,17 +56,17 @@
    /* text-align: center; */
 
         .project {
-            max-width: 100%
+            max-width: 100%;
+            width: 400px;
+            height: 200px;
         }
         img {
             height: 200px;
+            width: 400px;
         }
 }
 
-.equal {  
-    display: -webkit-flex;
-    display: flex;
-}
+
 
 //contact
 #contact {
